--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <p id="msg">Can You Beat the AI?</p>
       <button id="new-btn1">New Game</button>
       <p id="msg-2" class="hide">Choose your starting move:</p>
-      <button id="start-ai-btn" class="hide">AI go first</button>
-      <button id="start-you-btn" class="hide">You go first</button>
+      <button id="start-ai-btn" class="hide">Start AI</button>
+      <button id="start-you-btn" class="hide">Start You</button>
       
     </div>
     
